Fixed Firefox scrollbar & switch app problem

--- a/desktop/frontend/src/styles/globals.scss
+++ b/desktop/frontend/src/styles/globals.scss
@@ -5,6 +5,7 @@
 @import './highlight.scss';
 html {
   font-size: 12px;
+  scrollbar-color: transparent transparent;
 }
 
 ::-webkit-scrollbar {
